--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -30,5 +30,5 @@ jobs:
           docker_name: ''
           cmd_options: ''
           issue_title: ''
-          fail_action: ''
-          allow_issue_writing: ''
+          fail_action: true
+          allow_issue_writing: true
