--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -17,7 +17,8 @@ jobs:
         uses: SonarSource/sonarcloud-github-action@master
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}      
+
   owasp-zap:
     name: OWASP ZAP Baseline Scan
     runs-on: ubuntu-latest
@@ -25,10 +26,7 @@ jobs:
       - uses: zaproxy/action-baseline@v0.6.1
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
-          target: 'https://google.com'
-          rules_file_name: ''
-          docker_name: ''
-          cmd_options: ''
-          issue_title: ''
+          target: 'https://www.google.com'
+          docker_name: 'owasp/zap2docker-stable'
           fail_action: true
           allow_issue_writing: true
