--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,14 +1,18 @@
-name: Build
-on:
-  push:
-    branches:
-      - main
-  pull_request:
-    types: [opened, synchronize, reopened]
+on: [pull_request]
+
+name: ChatGPT CodeReview
+
 jobs:
-  ChatGPT:
-    name: ChatGPT
+  chatgpt_comment:
     runs-on: ubuntu-latest
+    name: Let chatgpt comment on your PR.
     steps:
-      - name: ChatGPT Integration
+      - name: ChatGPT comment
         uses: kxxt/chatgpt-action@v0.3
+        id: chatgpt
+        with:
+          number: ${{ github.event.pull_request.number }}
+          sessionToken: ${{ secrets.CHATGPT_SESSION_TOKEN }}
+          split: 'false'  # Use true to enable the unstable split feature.
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
